fix stat items on mobile

--- a/theme/static/css/components.css
+++ b/theme/static/css/components.css
@@ -1181,8 +1181,26 @@
 
 @media (max-width: 768px) {
     .stats, .specials {
-        grid-template-columns: 1fr;
-        margin: 2rem 1rem;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 1.5rem 0.5rem;
+        gap: 0.75rem;
+        align-items: start;
+    }
+
+    .stat-list, .special-list {
+        padding: 0;
+    }
+
+    .stat-list-item, .special-list-item {
+        white-space: nowrap;
+    }
+
+    .stat-list-item i, .special-list-item i {
+        font-size: 3rem;
+    }
+
+    .special-list-item:last-child {
+        display: none;
     }
 }
 
